# releasy-client-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASING.md  justfile  openapi.json
.github/workflows/: release.yml
src/: client.rs  error.rs  lib.rs  models.rs
tests/: client.rs
